--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.17.0",
+    "mongoose": "^6.13.8",
     "socket.io": "^4.7.5"
   }
 }
